<resources>
    <string name="app_name">Vehicle Journal</string>

    <string name="head_car">Vehicle Journal</string>
    <string name="head_oil">Vehicle Fuel</string>
    <string name="head_price_service">Vehicle Service</string>
    <string name="license_plate">License Plate :</string>
    <string name="input_license_plate">กรอกเลขทะเบียนรถยนต์</string>
    <string name="cost">ค่าใช้จ่าย :</string>

    <string name="head_menu_main">เมนูการบันทึก</string>


    <string name="oil_litemeter">ราคาต่อลิตร</string>
    <string name="oil_money">จำนวนเงิน</string>
    <string name="oil_volume">ปริมาณเชื้อเพลิง</string>
    <string name="oil_distance">มาตรวัดระยะทาง</string>
    <string name="lit">ลิตร</string>
    <string name="oil_type">ประเภทเชื้อเพลิง :</string>
    <string name="oil_full">เต็มถัง</string>
    <string name="oil_pay">การชำระเงิน :</string>
    <string name="oil_mark">Note</string>

    button
    <string name="button_save">บันทึกรายการ</string>
    <string name="button_cancel">ยกเลิก</string>
    <string name="button_list_oil">ประวัติการเติมน้ำมัน</string>

    <string name="car_title">จุดประสงค์การใช้รถ*</string>
    <string name="car_detail">รายละเอียด</string>
    <string name="car_km_in">เลข Km ที่ออกเดินทาง*</string>
    <string name="car_km_out">เลข Km ที่ถึงจุดหมาย*</string>

    <string name="button_save_car">บันทึกข้อมูล</string>
    <string name="button_list_car">ประวัติการใช้รถ</string>

    <string name="km">Km</string>

    <string name="login">LogIn</string>
    <string name="bath">บาท</string>


    <string name="user_member">รหัสพนักงาน</string>
    <string name="id_card">เลขบัตรประชาชน</string>
    <string name="birth_date">วันเกิด</string>
    <string name="select_date">เลือกวันเกิด</string>

    <string name="category">ประเภท</string>
    <string name="cost_information">ข้อมูลค่าใช้จ่าย</string>
    <string name="detail">รายละเอียด</string>

    other
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading.............</string>
    <string name="short_minute"> น. </string>
    <string name="no_text">No text</string>
    <string name="program_not_process">Program Not Process</string>
    <string name="add">Add</string>


    priceOtherActivity
    <string name="edt_price_title">ชื่อเรื่อง</string>
    <string name="edt_money_service">ราคารวม</string>
    <string name="edt_price_other_note">บันทึกรายละเอียด</string>


    tripStart
    <string name="reservation_number">เลขที่การจองรถ :</string>
    <string name="purpose">จุดประสงค์ :</string>
    <string name="departure_date">วันที่ออกเดินทาง :</string>
    <string name="departure_time">เวลาออกเดินทาง :</string>
    <string name="departure_odometer">เลขไมล์เริ่มออกเดินทาง :</string>
    <string name="departure_location">ตำแหน่งเริ่มเดินทาง :</string>
    <string name="fuel_level">ระดับน้ำมัน :</string>
    <string name="select_departure_date">เลือกวันที่ออกเดินทาง</string>
    <string name="select_departure_time">เลือกเวลาที่ออกเดินทาง</string>
    <string name="select">เลือก</string>
    <string name="head_location_trip">ตำแหน่งการเดินทาง</string>
    <string name="tip_location_title">ใช้ตำแหน่ง GPS  </string>
    <string name="tip_location_name">สถานที่เริ่มการเดินทาง</string>
    <string name="btn_start_trip">เริ่มเดินทาง</string>


    carTripMain
    <string name="btn_price_other">ค่าใช้จ่ายในการเดินทาง</string>
    <string name="btn_end_trip">สิ้นสุดการเดินทาง</string>

    endTrip
    <string name="default_dialog_title">End Trip</string>
    <string name="odometer_num">เลขไมล์:</string>
    <string name="arrival_location">สถานที่จุดหมาย</string>
    <string name="arrival_date">วันที่กลับ:</string>
    <string name="arrival_time">เวลาที่กลับ:</string>
    <string name="parking_fee">สถานที่จอดรถ</string>

    serviceRecord
    <string name="service_date">วันที่ใช้บริการ :</string>
    <string name="service_time">เวลาที่ใช้บริการ :</string>
    <string name="service_location">สถานที่ใช้บริการ :</string>
    <string name="service_type">ประเภทของการซ่อมบำรุง :</string>


    customAlertDialog
    <string name="default_custom_alert_dialog_title">You should in put title</string>
    <string name="default_custom_alert_dialog_message">Wait Please............</string>

    customProgressDialog
    <string name="default_custom_progress_dialog_title">Please Wait</string>

    myAddPermission
    <string name="default_myaddpermission_allow_gps">you need to allow access to GPS</string>

    locationFirst
    <string name="default_my_location_fist_title"> Finding Location GPS </string>

    custom_message
    <string name="message_end_trip">End Trip</string>
    <string name="message_you_want_ent_trip">You want End Trip</string>
    <string name="message_please_input_data">Please input data</string>
    <string name="message_no_license_plate">No LicensePlate</string>
    <string name="message_should_input_license_plate">You should in put LicensePlate............</string>
    <string name="message_save_data_title">Save Data</string>
    <string name="message_save_success">Save Success</string>
    <string name="message_no_trip">No Trip Data</string>
    <string name="message_add_trip">Please Add Trip</string>
    <string name="message_error">Error</string>
    <string name="message_id_card_wrong">ID Card is wrong</string>
    <string name="message_data_wrong">Data is Wrong</string>
    <string name="message_data_correct">Data is Correct</string>
    <string name="message_title_change_car">เปลี่ยนรถ</string>
    <string name="message_change_car">คุณต้องการเปลี่ยนรถใช่หรือไม่</string>
    <string name="message_title_add_permission">อนุญาติเข้าถึงตำแหน่ง GPS</string>
    <string name="message_trip_on_start">กำลังเดินทาง</string>
    <string name="message_description_end_trip">คุณต้องการจบการเดินทาง ใช่ หรือ ไม่</string>
    <string name="message_no_open_gps">No Open GPS</string>


    <string-array name="oil_array">
        <item>เบนซิน 91</item>
        <item>เบนซิน 95</item>
        <item>แก๊สโซฮอล์ 91</item>
        <item>แก๊สโซฮอล์ 95</item>
        <item>ดีเซล</item>
    </string-array>

    <string-array name="money_pay_array">
        <item>เงินสด</item>
        <item>บัตร</item>
    </string-array>

    <string-array name="price_other_array">
        <item>ค่าจอดรถ</item>
        <item>ค่าทางด่วน</item>
        <item>ค่าปรับ</item>
        <item>อื่นๆ</item>
    </string-array>
    <string name="custom_exit">exit</string>
    <string name="register">ลงทะเบียน</string>
    <string name="button_access">เข้าใช้งาน</string>


    <string name="txt_pin_add_input">กรุณาเพิ่ม Pin </string>
    <string name="txt_pin_input">กรุณาใส่ Pin</string>
    <string name="txt_pin_confirm">กรุณาใส่ Pin เพื่อยืนยัน</string>
    <string name="txt_pin_error">หมายเลข Pin ไม่ถูกต้อง</string>
    <string name="txt_pin_title">PIN</string>
    <string name="txt_pin_new">กรุณาใส่ Pin ใหม่</string>
    <string name="txt_pin_correct">Pin ถูกต้อง</string>
    <string name="txt_change_car">เปลี่ยนรถ</string>
    <string name="txt_vehicle_journal">บันทึกการใช้รถ</string>
    <string name="title_setting">ตั้งค่า</string>
    <string name="button_save_oil">บันทึกข้อมูล</string>
    <string name="txt_change_pin_code">เปลี่ยน Pin</string>
    <string name="txt_thai">ภาษาไทย</string>
    <string name="txt_eng">ภาษาอังกฤษ</string>
    <string name="title_activity_price_all2">PriceAllActivity2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main23">Main2Activity3</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_cus_tom_test_main">CusTomTestMainActivity</string>
    <string name="title_activity_setting_new">SettingNewActivity</string>
    <string name="title_activity_main_new">MainNewActivity</string>
    <string name="title_activity_custom_menu_test">CustomMenuTestActivity</string>
    <string name="title_main">Main</string>


</resources>
