<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stecon.patipan_on.diarycar.MainActivity">


    <TextView
        android:id="@+id/tvMainLicensePlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_plate"
        android:textSize="@dimen/head_1"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnGoDiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_car"

        android:layout_marginBottom="98dp"
        android:layout_above="@+id/btnGoOil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnGoOil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_oil"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnGoService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_price_service"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/btnGoOil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnExitLicensePlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Exit" />

</RelativeLayout>
