<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/box_custom_list_background"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"

        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEndTripDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h3"
            android:text="@string/arrival_date" />

        <TextView
            android:id="@+id/tvArrivalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/h3"
            android:layout_weight="1" />

        <!--<Button-->
            <!--android:id="@+id/btnArrivalSelectDate"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/select" />-->

        <ImageButton
            android:id="@+id/imgBtnArrivalSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_today_white_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEndTripTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h3"
            android:text="@string/arrival_time" />

        <TextView
            android:id="@+id/tvArrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/h3"
            android:layout_weight="1" />

        <!--<Button-->
            <!--android:id="@+id/btnArrivalSelectTime"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/select" />-->

        <ImageButton
            android:id="@+id/imgBtnArrivalSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alarm_white_24dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtArrivalOdometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"

        android:hint="@string/odometer_num"
        android:inputType="numberDecimal"
        android:textSize="@dimen/h3" />

    <EditText
        android:id="@+id/edtArrivalParkingLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/parking_fee"
        android:textSize="@dimen/h3" />

    <EditText
        android:id="@+id/edtEndNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/edt_price_other_note"
        android:textSize="@dimen/h3" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="16dp"
            android:text="@string/button_cancel"
            android:theme="@style/ButtonCancelTheme" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="16dp"
            android:text="@string/button_save"
            android:theme="@style/ButtonOkTheme" />

    </LinearLayout>
</LinearLayout>