<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    tools:context="com.stecon.patipan_on.diarycar.ServiceRecordsActivity">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/box_background"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textLicensePlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_plate" />

            <TextView
                android:id="@+id/tvLicensePlateService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:text="test"
                android:textSize="@dimen/h5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textServiceType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_type" />

            <Spinner
                android:id="@+id/spinnerService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textServiceOdoMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odometer_num" />

            <EditText
                android:id="@+id/edtServiceOdometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="@dimen/h5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textServiceFuelLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_level" />

            <EditText
                android:id="@+id/edtFuelLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="@dimen/h5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textServiceCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/cost" />

            <EditText
                android:id="@+id/edtServiceCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="@dimen/h5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDepartureDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_date" />

            <TextView
                android:id="@+id/tvServiceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSelectServiceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_time" />

            <TextView
                android:id="@+id/tvServiceTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSelectServiceTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/box_background"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        android:id="@+id/linearLayout10">

        <Switch
            android:id="@+id/switchServiceGps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="10dp"
            android:text="@string/tip_location_title"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/tvLinearServiceLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtServiceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_location" />

            <EditText
                android:id="@+id/edtServiceLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnServiceSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
